primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Contact/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <label>Allergies</label>
    <length>255</length>
    <type>Text</type>
    <description>Known allergies or ingredient sensitivities (semicolon-separated)</description>
</CustomField>