primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Contact/fields/Beauty_Priority__c.field-meta.xml
<CustomField>
    <fullName>Beauty_Priority__c</fullName>
    <label>Beauty Priority</label>
    <length>255</length>
    <type>Text</type>
    <description>Customer's primary beauty priority (e.g. anti-aging, hydration, clean beauty)</description>
</CustomField>