primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Contact/fields/Climate_Context__c.field-meta.xml
<CustomField>
    <fullName>Climate_Context__c</fullName>
    <label>Climate Context</label>
    <length>255</length>
    <type>Text</type>
    <description>Climate or environment context affecting skincare needs</description>
</CustomField>