primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Contact/fields/Preferred_Brands__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Brands__c</fullName>
    <label>Preferred Brands</label>
    <length>255</length>
    <type>Text</type>
    <description>Semicolon-separated preferred brand names</description>
</CustomField>