primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Contact/fields/Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Price_Range__c</fullName>
    <label>Price Range</label>
    <length>50</length>
    <type>Text</type>
    <description>Preferred price range (e.g. budget, mid-range, luxury)</description>
</CustomField>