primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Contact/fields/Skin_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Skin_Concerns__c</fullName>
    <label>Skin Concerns</label>
    <length>255</length>
    <type>Text</type>
    <description>Semicolon-separated skin concerns (e.g. acne;dark spots;fine lines)</description>
</CustomField>