primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Contact/fields/Skin_Type__c.field-meta.xml
<CustomField>
    <fullName>Skin_Type__c</fullName>
    <label>Skin Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Normal</fullName><default>false</default><label>Normal</label></value>
            <value><fullName>Dry</fullName><default>false</default><label>Dry</label></value>
            <value><fullName>Oily</fullName><default>false</default><label>Oily</label></value>
            <value><fullName>Combination</fullName><default>false</default><label>Combination</label></value>
            <value><fullName>Sensitive</fullName><default>false</default><label>Sensitive</label></value>
            <value><fullName>Acne-Prone</fullName><default>false</default><label>Acne-Prone</label></value>
            <value><fullName>Mature</fullName><default>false</default><label>Mature</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>