primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Contact/fields/Sustainability_Preference__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Preference__c</fullName>
    <label>Sustainability Preference</label>
    <length>255</length>
    <type>Text</type>
    <description>Sustainability preferences (e.g. vegan, cruelty-free, clean beauty, organic)</description>
</CustomField>